Committing 1.5.0 release. Will be tagged as "release-1_5_0"
git-svn-id: http://current.tigris.org/svn/current/trunk@17 7112b371-5efc-0310-9db1-efd4ebc68ee9

--- a/current.conf
+++ b/current.conf
@@ -94,7 +94,7 @@ access_check_type = user
 access_check_arg = apache
 server_secret = YOUR_SECRET_STRING_HERE
 server_id = YOUR_HOSTNAME_HERE
-current_dir = /local/linux/current
+current_dir = YOUR_CURRENT_DIR_HERE
 
 # These are some text messages that the server can return to the clients
 #  in various API calls.
