Committing release 1.5.2 (rel1.5.1 got lost) tagged as "release-1_5_2"
git-svn-id: http://current.tigris.org/svn/current/trunk@25 7112b371-5efc-0310-9db1-efd4ebc68ee9

--- a/current.conf
+++ b/current.conf
@@ -1,148 +1,53 @@
 # Example Current config file
 #
 
-# General guidelines:
-# 1. Every current.conf must have a "current" section, which is the 
-#    main config section.
-# 2. Section name rule -> '-', '_', alphanum
-# 3. field name rule  -> '-', '.', '_', alphanum
-# 4. All fields must be present, even if blank.
-# 
-
-# General Section descriptions:
-# [current]
-# valid_channels = list of all the channel labels to actually use. This
-#                  allows the admin to define a channel for future use, or
-#                  disable an old channel without deleting anything.
-#
-# log_file = File to send log messages to
-#
-# log_level = How much should we send to the log file?
-#
-# apache_config_file = file to put apache/mod_python configuration 
-#                      in. Should be included in httpd.conf
-#
-# access_check_type = How should checkperms tell if you have your permissions
-#                     set correctly? Values are:
-#                     None  -- perform no check
-#                     User  -- assume user in 'access_check_arg' has read
-#                     Group -- assume group in 'access_check_arg' has read
-#                     All   -- assume everyone can read
-#                     For all or none, the argument is not used 
-#                 John, update docs for setting this string.
-#
-# access_check_arg  = If access_check_type is set to user or group, the 
-#                     arg specifies WHICH user or group to check. 
-#                     Should be a valid user name or group name. 'apache' is 
-#                     by far the most common value for either.
-#                 John, update docs for setting this string.
-#
-# server_secret = text to get sha1'd for systemid tokens. 
-#                 Must be kept secret, and site specific.
-# 
-#                 When debugging current problems, DON'T POST THIS TO THE 
-#                 MAILING LIST.
-#                 John, update docs for setting this string.
-#
-# server_id = maybe this should be site id if you have more than 1.
-#
-# welcome_message = Text for rhn_register welcome message
-#
-# privacy_statement = Text for rhn_register privacy statement.
-#
-# current_dir = directory where all the Current data is kept. Headers,
-#         packages lists, dependancy data, all sorts of muck.
-#         NOTE: This was per-channel in <1.3.3. Now there is one per
-#         server to better accomodate mod_python usage.
-
-
-# [label]
-# name = Text name (human readable) name of this distribution
-#        Should be only 1 line.
-#
-# parent_channel = Channel representing the base channel that provides most
-#                  of the packages to this one, blank otherwise.
-#
-# arch = The cannonical architecture (a family of archs that this
-#        channel supports. (i386, sparc, alpha. Not i686, etc)
-#
-# os_release = Release of the channel. 6.2, 7.0, 7.2, whatever.
-#
-# description = Textual description of what the channel represents. This 
-#               can be blank or a short paragraph.
-#
-# rpm_dirs = list of all the dirs that contain binary rpms that should be
-#            served to clients
-#
-# src_dirs = similarly, list of all the src rpms that should be served.
-#            Can be empty, but not missing 
-#
-# srpm_check = Check to be sure that for every binary rpm its source rpm
-#              is available.
-#              Values are:
-#              0 = perform no check
-#              1 = warn if the source rpm isn't available
-#              2 = fail if the source rpm isn't available
-
-
 [current]
-valid_channels = redhat-7.3-i386
+db_type = shelf
+db_connect = (what goes here???)
+
+# db_type = postgresql
+# db_connect = (host, database, user, password, opt, tty)
+
 log_file = /var/log/httpd/current.log    
-log_level = 0
 apache_config_file = /etc/httpd/conf/current.httpd.conf
-access_check_type = user
-access_check_arg = apache
-server_secret = YOUR_SECRET_STRING_HERE
-server_id = YOUR_HOSTNAME_HERE
-current_dir = YOUR_CURRENT_DIR_HERE
+access_type = user
+access_arg = apache
+current_dir = /local/linux/current
 
-# These are some text messages that the server can return to the clients
-#  in various API calls.
-## The period is there ot provide a "blank line". Sheesh.
-welcome_message = "Welcome to Hunter's up2date server."
-privacy_statement = "Privacy Statement for Hunter's up2date server: 
-    This is the internet - privacy is an illusion. 
-    .
-    Please note that only anonymous access is supported anyway - so while you 
-    have to get a valid system id (by going through the rhn_register program) 
-    there is no requirement to fill those fields out with real data. :) All 
-    that is required is that your architecture an os_release be accurately 
-    reported - and rhn_register fills that in automatically. "
+#welcome_message = "Welcome to Hunter's up2date server."
+#privacy_statement = "Privacy Statement for Hunter's up2date server"
 
-############################################################################
-[redhat-7.3-i386]
-name = Red Hat Linux 7.3
-parent_channel = 
-arch = i386
-os_release = 7.3
-description = Red Hat Linux 7.3
-srpm_check = 0
-
-rpm_dirs = /local/linux/redhat-7.3/RedHat/RPMS
-           /local/linux/redhat-7.3/other-pkgs/rh-updates 
-           /local/linux/redhat-7.3/other-pkgs/dulug
-           /local/linux/redhat-7.3/other-pkgs/phy
-           /local/linux/redhat-7.3/other-pkgs/powertools
-           /local/linux/redhat-7.3/other-pkgs/rawhide
-
-src_dirs = /local/linux/redhat-7.3/SRPMS
-
-
-#############################################################################
-# Note: since they are NOT included in valid_channels above, these channels
-# won't be created or used. They are just "live" doc.
-
-# The following is an example of what a sub-channel might look like.
-# You leave arch and os_release out of sub-channels, as they must match
-# the parent.
-[biology-7.1-i386]
-name = Duke Biology 7.1
-parent_channel = redhat-7.3-i386
-description = Duke Biology specific package will build upon Red Hat
-srpm_check = 0
-
-rpm_dirs = /local/linux/redhat-7.3/i386/other-pkgs/bio
-src_dirs = 
+# [redhat-7.3-i386]
+# name = Red Hat Linux 7.3
+# parent_channel = 
+# arch = i386
+# os_release = 7.3
+# description = Red Hat Linux 7.3
+# srpm_check = 0
+# 
+# rpm_dirs = /local/linux/redhat-7.3/RedHat/RPMS
+#            /local/linux/redhat-7.3/other-pkgs/rh-updates 
+#            /local/linux/redhat-7.3/other-pkgs/dulug
+#            /local/linux/redhat-7.3/other-pkgs/phy
+#            /local/linux/redhat-7.3/other-pkgs/powertools
+#            /local/linux/redhat-7.3/other-pkgs/rawhide
+# 
+# src_dirs = /local/linux/redhat-7.3/SRPMS
+# 
+# # Note: since they are NOT included in valid_channels above, these channels
+# # won't be created or used. They are just "live" doc.
+# 
+# # The following is an example of what a sub-channel might look like.
+# # You leave arch and os_release out of sub-channels, as they must match
+# # the parent.
+# [biology-7.1-i386]
+# name = Duke Biology 7.1
+# parent_channel = redhat-7.3-i386
+# description = Duke Biology specific package will build upon Red Hat
+# srpm_check = 0
+# 
+# rpm_dirs = /local/linux/redhat-7.3/i386/other-pkgs/bio
+# src_dirs = 
 
 
 ## END OF LINE ##
