Incorporating last two changesets from BitKeeper (post-1.5.2)
git-svn-id: http://current.tigris.org/svn/current/trunk@27 7112b371-5efc-0310-9db1-efd4ebc68ee9

--- a/current.conf
+++ b/current.conf
@@ -2,17 +2,19 @@
 #
 
 [current]
-db_type = shelf
-db_connect = (what goes here???)
-
-# db_type = postgresql
-# db_connect = (host, database, user, password, opt, tty)
-
-log_file = /var/log/httpd/current.log    
+# Variable only needed by cinstall
 apache_config_file = /etc/httpd/conf/current.httpd.conf
-access_type = user
+
+# Bits needed by cinstall AND current to connect to the database
+db_type = pysqlite
+db_connect = /tmp/current/db/current.sqlite
+
+# Bits needed by current itself.
+log_file = /tmp/current/current.log    
+log_level = 10
+access_type = none
 access_arg = apache
-current_dir = /local/linux/current
+current_dir = /tmp/current
 
 #welcome_message = "Welcome to Hunter's up2date server."
 #privacy_statement = "Privacy Statement for Hunter's up2date server"
