Committing merged PostgreSQL work to main trunk - 1.5.3pre1
git-svn-id: http://current.tigris.org/svn/current/trunk@55 7112b371-5efc-0310-9db1-efd4ebc68ee9

--- a/current.conf
+++ b/current.conf
@@ -2,16 +2,13 @@
 #
 
 [current]
-# Variable only needed by cinstall
-apache_config_file = /etc/httpd/conf/current.httpd.conf
-
-# Bits needed by cinstall AND current to connect to the database
 db_type = pysqlite
-db_connect = /tmp/current/db/current.sqlite
+db_connect = (what goes here???)
 
-# Bits needed by current itself.
+# db_type = postgres
+
 log_file = /tmp/current/current.log    
-log_level = 10
+apache_config_file = /etc/httpd/conf/current.httpd.conf
 access_type = none
 access_arg = apache
 current_dir = /tmp/current
