--- a/current.conf
+++ b/current.conf
@@ -1,52 +1,25 @@
-# Example Current config file
-#
-
 [current]
-db_type = pysqlite
-db_connect = (what goes here???)
-
-# db_type = postgres
-
-log_file = /tmp/current/current.log    
+log_file = /var/log/httpd/current.log    
+log_level = 10
 apache_config_file = /etc/httpd/conf/current.httpd.conf
-access_type = none
+access_type = user
 access_arg = apache
-current_dir = /tmp/current
+current_dir = /export/current
+# The 'db' is which backend we're using
+# db_type=sqlite
+db_type = postgres
+# db_user and db_pass should be obvious
+db_user = <user>
+db_pass = <password>
+# db_name is the name of the database - what oracle calls a 'SID'
+db_name = <instance>
+db_host = <hostname>
 
-#welcome_message = "Welcome to Hunter's up2date server."
-#privacy_statement = "Privacy Statement for Hunter's up2date server"
-
-# [redhat-7.3-i386]
-# name = Red Hat Linux 7.3
-# parent_channel = 
-# arch = i386
-# os_release = 7.3
-# description = Red Hat Linux 7.3
-# srpm_check = 0
-# 
-# rpm_dirs = /local/linux/redhat-7.3/RedHat/RPMS
-#            /local/linux/redhat-7.3/other-pkgs/rh-updates 
-#            /local/linux/redhat-7.3/other-pkgs/dulug
-#            /local/linux/redhat-7.3/other-pkgs/phy
-#            /local/linux/redhat-7.3/other-pkgs/powertools
-#            /local/linux/redhat-7.3/other-pkgs/rawhide
-# 
-# src_dirs = /local/linux/redhat-7.3/SRPMS
-# 
-# # Note: since they are NOT included in valid_channels above, these channels
-# # won't be created or used. They are just "live" doc.
-# 
-# # The following is an example of what a sub-channel might look like.
-# # You leave arch and os_release out of sub-channels, as they must match
-# # the parent.
-# [biology-7.1-i386]
-# name = Duke Biology 7.1
-# parent_channel = redhat-7.3-i386
-# description = Duke Biology specific package will build upon Red Hat
-# srpm_check = 0
-# 
-# rpm_dirs = /local/linux/redhat-7.3/i386/other-pkgs/bio
-# src_dirs = 
-
+# These are some text messages that the server can return to the clients
+#  in various API calls.
+## The period is there ot provide a "blank line". Sheesh.
+welcome_message = "Welcome to John's edition of Hunter's up2date server."
+privacy_statement = "Privacy Statement: 
+	Privacy?  We don't need no privacy!"
 
 ## END OF LINE ##
