Issue number:  15 Obtained from: - Submitted by:  jwbernin Reviewed by:   jwbernin Forgot to add "applet" module to Makefiles.  Oops.
git-svn-id: http://current.tigris.org/svn/current/trunk@76 7112b371-5efc-0310-9db1-efd4ebc68ee9

--- a/src/api/Makefile
+++ b/src/api/Makefile
@@ -2,7 +2,7 @@
 # Makefile for installing the api package for current
 #
 
-MODULES		= cadmin errata queue registration up2date __init__
+MODULES		= cadmin errata queue registration up2date __init__ applet
 PYFILES         = $(addsuffix .py,  $(MODULES))
 OBJECTS         = $(addsuffix .pyc, $(MODULES))
 
