Removed old misc.py Renamed arch.py (which replaced misc.py) to archtab.py
git-svn-id: http://current.tigris.org/svn/current/trunk@84 7112b371-5efc-0310-9db1-efd4ebc68ee9

--- a/src/Makefile
+++ b/src/Makefile
@@ -2,9 +2,9 @@
 # Makefile for installing the python modules for current
 #
 
-MODULES			= arch auth configfile configure \
+MODULES			= archtab auth configfile configure \
                   ConstructParser current_apache \
-                  logger misc rpm_wrapper
+                  logger rpm_wrapper
 PYFILES         = $(addsuffix .py,  $(MODULES))
 OBJECTS         = $(addsuffix .pyc, $(MODULES))
 
