Bugfixes for build process: 	- remove config module from Makefile Bugfixes: 	- self.* removed from archtab 	- configure changed to read proper configuration file 	- Don't bomb on trying to read non-RPM files, just ignore them 	- rescanning tree resets all active rpms to avoid stale active pointers
git-svn-id: http://current.tigris.org/svn/current/trunk@88 7112b371-5efc-0310-9db1-efd4ebc68ee9

--- a/current.conf
+++ b/current.conf
@@ -22,4 +22,6 @@ welcome_message = "Welcome to John's edition of Hunter's up2date server."
 privacy_statement = "Privacy Statement: 
 	Privacy?  We don't need no privacy!"
 
+server_id = <REPLACE ME!>
+server_secret = <REPLACE ME, TOO!>
 ## END OF LINE ##
