Finished porting 1.4.4 changes to the HEAD tree.
git-svn-id: http://current.tigris.org/svn/current/trunk@125 7112b371-5efc-0310-9db1-efd4ebc68ee9

--- a/src/api/Makefile
+++ b/src/api/Makefile
@@ -2,13 +2,13 @@
 # Makefile for installing the api package for current
 #
 
-MODULES		= cadmin errata queue registration up2date __init__ applet
+MODULES	        = applet cadmin errata queue registration servers up2date __init__ 
 PYFILES         = $(addsuffix .py,  $(MODULES))
 OBJECTS         = $(addsuffix .pyc, $(MODULES))
 
-INSTALL_DIRS	= $(DATA_DIR)/api
+INSTALL_DIRS    = $(DATA_DIR)/api
 
-SUBDIRS 	= 
+SUBDIRS         = 
 
 
 # default python rules:
