Issue number:  27 Obtained from: bholzm1 Submitted by:  jwbernin Reviewed by: This commit does the following: - Fix for issue #27 	I don't have any way to test a 7.2 tree (no system, can't get a tree), 	so please test this. - New internal RPM interface 	Lots of breakage caused by earlier commits.  I can read in 7.3, 8.0, 	and 9 trees no problem now.  takes ~ 15 - 20 min per tree for initial 	db population. - Should be called "release candidate 1 for 1.5.6.  1.5.5 will never be allowed   to escape it's solitary confinement.
git-svn-id: http://current.tigris.org/svn/current/trunk@135 7112b371-5efc-0310-9db1-efd4ebc68ee9

--- a/src/Makefile
+++ b/src/Makefile
@@ -4,7 +4,7 @@
 
 MODULES			= archtab auth configure \
                   ConstructParser current_apache \
-                  logger rpm_wrapper
+                  logger RPM
 PYFILES         = $(addsuffix .py,  $(MODULES))
 OBJECTS         = $(addsuffix .pyc, $(MODULES))
 
