Fixed up the bogus 8.x/9 spec file requires. Fixed up the shipped current.conf to be 8.x/9 friendly. Code cleanup to cadmin - we use the same ca cert file up2date will use                          and removed some old duplicate code.
git-svn-id: http://current.tigris.org/svn/current/trunk@137 7112b371-5efc-0310-9db1-efd4ebc68ee9

--- a/current.conf
+++ b/current.conf
@@ -1,7 +1,7 @@
 [current]
-log_file = /var/log/httpd/current.log    
-log_level = 10
-apache_config_file = /etc/httpd/conf/current.httpd.conf
+log_file = /var/log/current.log    
+log_level = 1
+apache_config_file = /etc/httpd/conf.d/current.httpd.conf
 access_type = user
 access_arg = apache
 current_dir = /export/current
@@ -17,10 +17,11 @@ db_host = <hostname>
 
 # These are some text messages that the server can return to the clients
 #  in various API calls.
-## The period is there ot provide a "blank line". Sheesh.
-welcome_message = "Welcome to John's edition of Hunter's up2date server."
+## The period is there to provide a "blank line". Sheesh.
+welcome_message = "Welcome to current, an open source server for up2date."
 privacy_statement = "Privacy Statement: 
-	Privacy?  We don't need no privacy!"
+	This is site specific, and you should change this message to match
+    your actual site."
 
 server_id = <REPLACE ME!>
 server_secret = <REPLACE ME, TOO!>
