Code cleanups. Should permanently fix SQL quoting problems in a portable way.
git-svn-id: http://current.tigris.org/svn/current/trunk@140 7112b371-5efc-0310-9db1-efd4ebc68ee9

--- a/src/db/mysql/Makefile
+++ b/src/db/mysql/Makefile
@@ -2,14 +2,13 @@
 # Makefile for installing the database package for current
 #
 
-MODULES			= currentdb __init__
+MODULES			= __init__ mysql schema
 PYFILES         = $(addsuffix .py,  $(MODULES))
 OBJECTS         = $(addsuffix .pyc, $(MODULES))
 
-INSTALL_DIRS	= $(DATA_DIR)/db
+INSTALL_DIRS	= $(DATA_DIR)/db/mysql
 
-SUBDIRS 		=  postgres pysqlite mysql
-
+SUBDIRS = 
 
 # default python rules:
 %.pyc: %.py
@@ -20,9 +19,9 @@ all:: $(OBJECTS)
 files: $(PYFILES)
 
 install:: $(OBJECTS)
-	$(INSTALL_DIR) $(INSTALL_ROOT)$(DATA_DIR)/db
+	$(INSTALL_DIR) $(INSTALL_ROOT)$(DATA_DIR)/db/mysql
 
-	$(INSTALL_DATA) $(PYFILES) $(OBJECTS) $(INSTALL_ROOT)$(DATA_DIR)/db
+	$(INSTALL_DATA) $(PYFILES) $(OBJECTS) $(INSTALL_ROOT)$(DATA_DIR)/db/mysql
 
 clean::
 	@rm -fv *.pyc *.pyo *~
