Updating CVS to 1.5.6 with your's truely as new maintainer.
git-svn-id: http://current.tigris.org/svn/current/trunk@149 7112b371-5efc-0310-9db1-efd4ebc68ee9

--- a/src/Makefile
+++ b/src/Makefile
@@ -4,7 +4,7 @@
 
 MODULES			= archtab auth configure \
                   ConstructParser current_apache \
-                  logger RPM
+                  logger RPM exception sets
 PYFILES         = $(addsuffix .py,  $(MODULES))
 OBJECTS         = $(addsuffix .pyc, $(MODULES))
 
