Syncing to Tigris's CVS server.  This is Current 1.5.7
git-svn-id: http://current.tigris.org/svn/current/trunk@152 7112b371-5efc-0310-9db1-efd4ebc68ee9

--- a/src/Makefile
+++ b/src/Makefile
@@ -4,7 +4,7 @@
 
 MODULES			= archtab auth configure \
                   ConstructParser current_apache \
-                  logger RPM exception sets
+                  logger RPM exception sets xmlrpc
 PYFILES         = $(addsuffix .py,  $(MODULES))
 OBJECTS         = $(addsuffix .pyc, $(MODULES))
 
