CVS sync for 1.5.9
git-svn-id: http://current.tigris.org/svn/current/trunk@157 7112b371-5efc-0310-9db1-efd4ebc68ee9

--- a/current.conf
+++ b/current.conf
@@ -6,7 +6,7 @@ access_type = user
 access_arg = apache
 current_dir = /export/current
 # The 'db' is which backend we're using
-# db_type=sqlite
+# db_type=pysqlite
 db_type = postgres
 # db_user and db_pass should be obvious
 db_user = <user>
