Current 1.5.11 + website updates
git-svn-id: http://current.tigris.org/svn/current/trunk@162 7112b371-5efc-0310-9db1-efd4ebc68ee9

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -8,7 +8,8 @@ current-guide-html: guide-source
 	xmlto html -o current-guide  current-guide.xml
 
 current-guide-ps: guide-source
-	xmlto ps current-guide.xml
+	#xmlto ps current-guide.xml
+	/bin/true
 
 guide-source: client.xml configuration.xml current-guide.xml installation.xml maintaining.xml databases.xml
 
