Due to lack of popular complaint...Current 1.6.0 Final.
git-svn-id: http://current.tigris.org/svn/current/trunk@166 7112b371-5efc-0310-9db1-efd4ebc68ee9

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -2,14 +2,14 @@
 # Makefile for installing the docs for current
 #
 
-all: current-guide-html current-guide-ps
+all: current-guide-html 
 
 current-guide-html: guide-source
 	xmlto html -o current-guide  current-guide.xml
 
 current-guide-ps: guide-source
-	#xmlto ps current-guide.xml
-	/bin/true
+	xmlto ps current-guide.xml
+	#/bin/true
 
 guide-source: client.xml configuration.xml current-guide.xml installation.xml maintaining.xml databases.xml
 
