These are the changes from Current-svn for 1.7.2-ish.  It contains mostly the begings of the web frontend and a few other odds and ends.
git-svn-id: http://current.tigris.org/svn/current/trunk@174 7112b371-5efc-0310-9db1-efd4ebc68ee9

--- a/src/db/Makefile
+++ b/src/db/Makefile
@@ -2,7 +2,7 @@
 # Makefile for installing the database package for current
 #
 
-MODULES			= currentdb __init__ resultSet sessions
+MODULES			= currentdb __init__ resultSet sessions web profile
 PYFILES         = $(addsuffix .py,  $(MODULES))
 OBJECTS         = $(addsuffix .pyc, $(MODULES))
 
