Makefiles, changelog for 1.7.2
git-svn-id: http://current.tigris.org/svn/current/trunk@175 7112b371-5efc-0310-9db1-efd4ebc68ee9

--- a/src/Makefile
+++ b/src/Makefile
@@ -11,7 +11,7 @@ OBJECTS         = $(addsuffix .pyc, $(MODULES))
 
 INSTALL_DIRS	= $(DATA_DIR)
 
-SUBDIRS = db api simpletal admin
+SUBDIRS = db api simpletal admin web
 
 
 # default python rules:
