Final commit for version 1.7.2
git-svn-id: http://current.tigris.org/svn/current/trunk@176 7112b371-5efc-0310-9db1-efd4ebc68ee9

--- a/current.conf
+++ b/current.conf
@@ -5,9 +5,13 @@ apache_config_file = /etc/httpd/conf.d/current.httpd.conf
 access_type = user
 access_arg = apache
 current_dir = /export/current
+
+# Location of TAL templates
+# template_dir = /usr/share/current/templates
+
 # The 'db' is which backend we're using
-# db_type=pysqlite
-db_type = postgres
+db_type=pysqlite
+# db_type = postgres
 # db_user and db_pass should be obvious
 db_user = <user>
 db_pass = <password>
