--- a/support/current.spec.in
+++ b/support/current.spec.in
@@ -2,7 +2,7 @@
 %{!?python_sitearch: %define python_sitearch %(%{__python} -c "from distutils.sysconfig import get_python_lib; print get_python_lib(1)")}
 
 Name:           current
-Version:        1.7.3
+Version:        VERSIONSUBST
 Release:        1%{?dist}
 Summary:        A server for Red Hat's up2date tools.
 
@@ -15,7 +15,7 @@ BuildRoot:      %{_tmppath}/%{name}-%{version}-%{release}-root-%(%{__id_u} -n)
 BuildArch:      noarch
 BuildRequires:  python-devel
 BuildRequires:  docbook-style-xsl docbook-style-dsssl docbook-dtds
-BuildRequires:  docbook-utils docbook-utils-pdf
+BuildRequires:  docbook-utils docbook-utils-pdf xmlto
 
 Requires: python-abi = %(%{__python} -c "import sys ; print sys.version[:3]")
 Requires: rpm-python mod_ssl
