Correct an error in cadmin with the log module's syntax.
Ship the Yum pluging turned off.  

Include the createrepo package as a requirement in the RPM


git-svn-id: http://current.tigris.org/svn/current/trunk@252 7112b371-5efc-0310-9db1-efd4ebc68ee9

--- a/support/current.spec.in
+++ b/support/current.spec.in
@@ -21,7 +21,7 @@ Requires: python-abi = %(%{__python} -c "import sys ; print sys.version[:3]")
 Requires: rpm-python mod_ssl
 Requires: mod_python >= 3.1
 Requires: rpm >= 4.0.2-8
-Requires: httpd
+Requires: httpd createrepo
 
 %description
 Current is a server implementation for Red Hat's up2date tools. It's
