--- a/cwebapp/sample-prod.cfg
+++ b/cwebapp/sample-prod.cfg
@@ -1,10 +1,10 @@
 [global]
-# This is where all of your settings go for your development environment
+# This is where all of your settings go for your production environment.
+# You'll copy this file over to your production server and provide it
+# as a command-line option to your start script.
 # Settings that are the same for both development and production
 # (such as template engine, encodings, etc.) all go in 
 # cwebapp/config/app.cfg
-
-# DATABASE
 
 # pick the form for your database
 # sqlobject.dburi="postgres://username@hostname/databasename"
@@ -13,7 +13,7 @@
 
 # If you have sqlite, here's a simple default to get you started
 # in development
-#sqlobject.dburi="sqlite://%(current_dir_uri)s/devdata.sqlite"
+sqlobject.dburi="sqlite://%(current_dir_uri)s/devdata.sqlite"
 
 
 # if you are using a database or table type without transactions
@@ -24,23 +24,23 @@
 # for Windows users, sqlite URIs look like:
 # sqlobject.dburi="sqlite:///drive_letter:/path/to/file"
 
+
 # SERVER
 
-# Some server parameters that you may want to tweak
-# server.socket_port=8080
+server.environment="production"
 
-# Enable the debug output at the end on pages.
-# log_debug_info_filter.on = False
+# Sets the number of threads the server uses
+# server.thread_pool = 1
 
-server.environment="development"
-autoreload.package="cwebapp"
-current = "https://localhost/XMLRPC"
+# if this is part of a larger site, you can set the path
+# to the TurboGears instance here
+# server.webpath=""
 
 # session_filter.on = True
 
 # Set to True if you'd like to abort execution if a controller gets an
 # unexpected parameter. False by default
-tg.strict_parameters = True
+# tg.strict_parameters = False
 
 # LOGGING
 # Logging configuration generally follows the style of the standard
@@ -49,15 +49,20 @@ tg.strict_parameters = True
 # Deployment independent log configuration is in cwebapp/config/log.cfg
 [logging]
 
+[[handlers]]
+
+[[[access_out]]]
+# set the filename as the first argument below
+args="('server.log',)"
+class='FileHandler'
+level='INFO'
+formatter='message_only'
+
 [[loggers]]
 [[[cwebapp]]]
-level='DEBUG'
+level='ERROR'
 qualname='cwebapp'
-handlers=['debug_out']
-
-[[[allinfo]]]
-level='INFO'
-handlers=['debug_out']
+handlers=['error_out']
 
 [[[access]]]
 level='INFO'
